# actix-blog

./: Cargo.toml  README.md
.github/workflows/: rust.yml
blog-example-database/: Cargo.toml
blog-example-database/src/: actor.rs  error.rs  lib.rs  messages.rs
blog-example-database/src/handlers/: create_article.rs  mod.rs  read_article.rs  read_articles.rs
blog-example-models/: Cargo.toml  README.md  diesel.toml
blog-example-models/migrations/2020-11-10-134837_create_clusters_table/: down.sql  up.sql
blog-example-models/src/: article.rs  lib.rs  schema.rs  user.rs
blog-example-serializers/: Cargo.toml
blog-example-serializers/src/: article.rs
src/: error.rs  lib.rs  main.rs  response_error.rs
src/handlers/article/: create.rs  delete.rs  read.rs  update.rs
src/routes/: v1.rs
