[package]
name = "blog-example"
version = "0.1.0"
authors = ["Andrey Ermilov <andrerm@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blog-example-database = { path = "blog-example-database" }
blog-example-models = { path = "blog-example-models" }
blog-example-serializers = { path = "blog-example-serializers" }

actix-web = "3"
actix = "0.10"
diesel = { version = "1", features = ["postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"

[workspace]
members = [
    "blog-example-database",
    "blog-example-models",
    "blog-example-serializers",
]
