[package]
name = "blog-example-models"
version = "0.1.0"
authors = ["Andrey Ermilov <andrerm@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1", features = ["postgres", "chrono"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }